--- a/HSD.html
+++ b/HSD.html
@@ -2,23 +2,34 @@
 <html>
   <link rel="stylesheet" href="styles.css">
   <body>
-    <div class="grid-container">
-      <div class="text grid-child">
-          Hate Speech Detection <br>
-          <span class="version">Version Alpha 0.2.0</span>
+    <div>
+
+      <div class="grid-container">
+        <div class="text grid-child">
+            <span id="title"></span><br>
+            <span id="version" class="version"></span>
+        </div>
+        <div class="text grid-child">
+          <!--
+          <label class="switch">
+          <input type="checkbox">
+          <span class="slider round">
+          -->
+          Placeholder Area
+        </div>
       </div>
-      <div class="text grid-child">
-        <label class="switch">
-        <input type="checkbox">
-        <span class="slider round">
-      </div>
+      
+      <form id="inputForm" method="post" autocomplete="off" >
+        <textarea rows="5" cols="35" id="user_input" placeholder="Insert Text Here" wrap="hard"></textarea>
+        <div class="button" align="center">
+          <button type="button" id="analyze" style="background-color: white">Analyze Text</button>
+        </div>
+        <textarea rows="5" cols="35" readonly id="out" placeholder="Output Goes Here" wrap="hard"></textarea>
+      </form>
+
     </div>
 
-    <form>
-      <input type="text" id="user_input" size="30" placeholder="Insert Text Here"><br>
-      <input type="submit" value="Analyze">
-      <button type="button" style="background-color: gray;">Analyze Text</button><br><br>
-      <output class="output inset">Output Is Here</output>
-    </form>
+    <script type="text/javascript" src="./exFunc.js"></script>
+
   </body>
 </html>
