--- a/HSD.html
+++ b/HSD.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="pyscript.css" />
 
   <head>
-    <script defer src="pyscript.js"></script>
+    <script defer src="./pyscript.js"></script>
     </head>
   <body>
     <div>
