--- a/HSD.html
+++ b/HSD.html
@@ -2,9 +2,9 @@
 <html>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="pyscript.css" />
-
   <head>
-    <script defer src="./pyscript.js"></script>
+    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+    <script type="text/javascript" defer src="./exFunc.js"></script>
     </head>
   <body>
     <div>
@@ -35,7 +35,7 @@
     </div>
     <py-config src="./pyscript.toml"></py-config>
     <py-script src="./main.py"></py-script>
-    <script type="text/javascript" src="./exFunc.js"></script>
+    
   </body>
 
 </html>
