--- a/userInterface.html
+++ b/userInterface.html
@@ -16,6 +16,6 @@
     <h3>Sentiment Classificaion: </h3>
     <textarea id="decision_display"></textarea>
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
-    <script src="popup.js"></script>
+    <script src="contextMenu.js"></script>
   </body>
 </html>
