--- a/userInterface.html
+++ b/userInterface.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <h2>Filipino Hatespeech Detection</h2>
-    <h3>Selected Text: </h3>
+    <h3>INPUT TEXT</h3>
     <textarea id="text_display"></textarea>
 
     <button type="button" id="analyze" style="background-color: white">Analyze Text</button>
   
     <h3>Sentiment Classificaion: </h3>
-    <textarea id="decision_display"></textarea>
+    <textarea id="decision_display" rows="5" cols="35" readonly placeholder="Output Goes Here" wrap="hard"></textarea>
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
     <script src="contextMenu.js"></script>
   </body>
