--- a/userInterface.html
+++ b/userInterface.html
@@ -33,7 +33,7 @@
     </form>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
-    <script src="contextMenu.js"></script>
     <script src="functions.js"></script>
+    <script src="cloudservice.js"></script>
   </body>
 </html>
