--- a/userInterface.html
+++ b/userInterface.html
@@ -22,17 +22,16 @@
       </div>
     </div>
 
-    <form id="inputForm" method="post" autocomplete="off" >
+    <form id="inputForm" method="post" autocomplete="off">
       <!--<h3 class="text">Input Text: </h3>-->
-    <textarea id="text_display" rows="5" cols="35" placeholder="Insert Text Here" wrap="hard"></textarea>
+    <textarea id="input_text" rows="5" cols="35" placeholder="Insert Text Here" wrap="hard"></textarea>
     <div align="center">
-      <button type="button" id="analyze" style="background-color: white">Analyze Text</button>
+      <button type="button" form="inputForm" id="analyze" style="background-color: white">Analyze Text</button>
     </div>
     <h3 class="text" style="text-align: center">Sentiment Classification</h3>
-    <textarea id="decision_display" rows="5" cols="35" readonly placeholder="Output Goes Here" wrap="hard"></textarea>
+    <textarea id="decision_display" style="text-align: center" rows="5" cols="35" readonly wrap="hard"></textarea>
     </form>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script> -->
     <script src="functions.js"></script>
     <script src="cloudservice.js"></script>
   </body>
