--- a/userInterface.html
+++ b/userInterface.html
@@ -5,7 +5,6 @@
     <title>Select Text</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="textareaStyle.css">
-
   </head>
   <body>
     <!-- 
@@ -23,15 +22,22 @@
     </div>
 
     <form id="inputForm" method="post" autocomplete="off">
-      <!--<h3 class="text">Input Text: </h3>-->
     <textarea id="input_text" rows="5" cols="35" placeholder="Insert Text Here" wrap="hard"></textarea>
+    
     <div align="center">
       <button type="button" form="inputForm" id="analyze" style="background-color: white">Analyze</button>
     </div>
-    <h3 id="decision_label" class="text" >ANALYSIS RESULT</h3>
+
+    <h3 id="decision_label" class="text" style="font-size: 1em;" >ANALYSIS RESULT</h3>
+    <!--
     <textarea id="decision_display" rows="5" cols="35" readonly wrap="hard"></textarea>
+    -->
+
+    <div id="decision_display" style="color: 2C2C2C">
+      
+    </div>
+
     </form>
-    <script src="cloudservice.js"></script>
     <script src="functions.js"></script>
   </body>
 </html>
